--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Валентинка</title>
-    <link rel="icon" href="../img/ico.ico" type="image/x-icon">
+    <link rel="icon" href="img/ico.ico" type="image/x-icon">
     <style>
         body {
             background-color: #fdfdfd; 
@@ -42,10 +42,10 @@ p{
 
     <div class="container">
         <button id="gifButton">
-            <img src="../img/heart.gif" alt="Initial GIF">
+            <img src="_img/heart.gif" alt="Initial GIF">
         </button>
         <div id="result" style="display:none;">
-            <img src="../img/3.gif" alt="New GIF">
+            <img src="_img/3.gif" alt="New GIF">
             <p>До біса цей день Валентина! Я люблю тебе кожного дня💗</p>
         </div>
     </div>
